# TaskMessenger

./: .gitignore  CITATION.cff  LICENSE  README.md  complete_message.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
anaconda/linux-32/: taskmessenger-0.0.1rc0-py38_0.tar.bz2
anaconda/linux-64/: taskmessenger-0.0.1rc0-py38_0.tar.bz2
anaconda/linux-aarch64/: taskmessenger-0.0.1rc0-py38_0.tar.bz2
anaconda/linux-armv6l/: taskmessenger-0.0.1rc0-py38_0.tar.bz2
anaconda/linux-armv7l/: taskmessenger-0.0.1rc0-py38_0.tar.bz2
anaconda/linux-ppc64/: taskmessenger-0.0.1rc0-py38_0.tar.bz2
anaconda/linux-ppc64le/: taskmessenger-0.0.1rc0-py38_0.tar.bz2
anaconda/linux-s390x/: taskmessenger-0.0.1rc0-py38_0.tar.bz2
anaconda/osx-arm64/: taskmessenger-0.0.1rc0-py38_0.tar.bz2
anaconda/taskmessenger/: meta.yaml
anaconda/win-32/: taskmessenger-0.0.1rc0-py38_0.tar.bz2
anaconda/win-64/: taskmessenger-0.0.1rc0-py38_0.tar.bz2
src/complete_message/: complete_message.py
src/complete_message.egg-info/: PKG-INFO  SOURCES.txt
src/complete_message_pkg_Armaan.egg-info/: PKG-INFO  SOURCES.txt
src/taskmessenger/: __init__.py  _server_location.py  send.py
src/taskmessenger.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/taskmessenger/_server/: _server.py
tests/: attachment_message.py  test_message.py  test_taskmessenger.py
