[metadata]
name = taskmessenger
description = Write emails after finishing a task
author = Armaan Ahmed
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    taskmessenger
install_requires =
    requests>=2
    types-requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
taskmessenger = py.typed

[flake8]
max-line-length = 256